Change more SFL references to FLOWER

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1,4 +1,5 @@
 {
+  "exchange.flower.coins": "Exchange FLOWER for coins",
   "active": "Active",
   "ingredients": "Ingredients",
   "animals.buyAnimal": "Buy Animal",
