[FEAT] Share and earn (#5445)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5755,5 +5755,24 @@
   "marketplace.boughtListing": "Bought Listing",
   "marketplace.soldListing": "Sold Listing",
   "marketplace.madeOffer": "Made Offer",
-  "marketplace.acceptedOffer": "Accepted Offer"
+  "marketplace.acceptedOffer": "Accepted Offer",
+  "twitter.post.farm": "Share your farm",
+  "twitter.post.weekly": "Share your weekly progress",
+  "posting.twitter.success": "Tweet posted successfully!",
+  "posting.twitter.failed": "No Tweets Found",
+  "posting.twitter.failed.description": "Hmm, it looks like you haven't posted a tweet yet. Please check you have uploaded a correct image and hashtag.",
+  "posting.twitter": "Verifying your tweets",
+  "twitter.rewards.description": "Post on Twitter each week to earn rewards!",
+  "twitter.share.earn": "Share & Earn",
+  "twitter.verify.ready": "Ready to be rewarded?",
+  "twitter.verify.instructions": "Please make sure you have posted the correct photo to Twitter, with hashtag {{hashtag}}.",
+  "twitter.verify.click.button": "Once you have posted, click the button below to verify your tweet.",
+  "twitter.verify.button": "Verify Tweet",
+  "twitter.farm.share": "Share your farm",
+  "twitter.farm.instructions.1": "1. Post a screenshot of your farm to Twitter with hashtag {{hashtag}}",
+  "twitter.farm.instructions.2": "2. Verify your tweet by clicking the button below.",
+  "twitter.weekly.share": "Share your farm",
+  "twitter.weekly.instructions.1": "1. Share the image above to Twitter with hashtag {{hashtag}}",
+  "twitter.weekly.instructions.2": "2. Verify your tweet by clicking the button below.",
+  "twitter.verify.cooldown": "Please wait {{time}} in between verifying your tweets."
 }
