[FEAT] Fruitful Blend Description with Fruitful Bounty Skill

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -658,6 +658,7 @@
   "community.url": "Enter your repo URL",
   "comunity.Travel": "Travel to community built islands",
   "compost.fruitfulBlend": "Fruitful Blend boosts the yield of each fruit growing on fruit patches by +0.1",
+  "compost.fruitfulBlendBoosted": "Fruitful Blend boosts the yield of each fruit growing on fruit patches by +0.2",
   "compost.sproutMix": "Sprout Mix increases your crop yield from plots by +0.2",
   "compost.sproutMixBoosted": "Sprout Mix increases your crop yield from plots by +0.4",
   "compost.rapidRoot": "Rapid Root reduces crop growth time from plots by 50%",
