[FEAT] Fix rewards

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5777,5 +5777,28 @@
   "twitter.weekly.instructions.2": "2. Verify your tweet by clicking the button below.",
   "twitter.verify.cooldown": "Please wait {{time}} in between verifying your tweets.",
   "marketplaceTransferInProgress": "Marketplace transfers are being finalised, please try again in a few minutes.",
-  "marketplaceTransferInProgress.label": "Marketplace transfer in progress"
+  "marketplaceTransferInProgress.label": "Marketplace transfer in progress",
+  "reward.vipDescription": "Bonus trading, XP, cooking & earning perks!",
+  "reward.blockchainBoxSuccess": "Congratulations, you earnt some rewards!",
+  "claiming.blockchain.box": "Claiming Blockchain Box",
+  "description.polygonBanner": "A symbol of the Polygon network",
+  "description.roninBanner": "A symbol of the Ronin network",
+  "description.baseBanner": "A symbol of the Base network",
+  "claiming.blockchain.box.success": "Congratulations, you earnt some rewards!",
+  "blockchain.limited.airdrop": "Limited airdrop!",
+  "blockchain.bonus.rewards": "Bonus rewards for BASE, Ronin & Polygon community members.",
+  "blockchain.earn.items": "Earn items, coins and VIP based on your Blockchain activity.",
+  "blockchain.claim.once": "Can only be claimed once per address.",
+  "blockchain.check.eligibility": "Check Eligibility",
+  "rewards.claim.title": "Claim your rewards!",
+  "rewards.blockchain.box.title": "Blockchain Box",
+  "rewards.blockchain.box.description": "Limited time offer for BASE, Ronin & Polygon.",
+  "rewards.blockchain.box.claimed": "Claimed",
+  "rewards.blockchain.box.limited": "Limited",
+  "rewards.daily.title": "Daily Reward",
+  "rewards.daily.description": "Bonus resources, coins & {ticket}",
+  "rewards.daily.claimed": "Claimed",
+  "rewards.vip.title": "VIP Reward",
+  "rewards.vip.description": "A monthly reward for VIP members",
+  "rewards.vip.claimed": "Claimed"
 }
