[FEAT] Show Modal automatically when player is in range of Streamer Hat (#5447)
* Fix state not updating to playing after claiming stream reward

* [FEAT] Show Modal automatically when player is in range of Streamer Hat

Co-authored-by: LittleEins <104184348+LittleEins@users.noreply.github.com>

* Update src/features/world/scenes/BaseScene.ts

* Update lastModalOpenTime to use streamerHatLastClaimedAt for better cooldown management in BaseScene

---------

Co-authored-by: LittleEins <104184348+LittleEins@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5740,7 +5740,7 @@
   "socialTask.complete50Deliveries": "Complete 50 deliveries",
   "socialTask.complete50Deliveries.description": "Go to the plaza and complete deliveries with various NPCs 50 times",
   "socialTask.joinStream": "Join a stream",
-  "socialTask.joinStream.description": "Join a dev chat on discord or twitch stream to earn 1 Love Charm every 5 minutes from the host wearing a stream hat.",
+  "socialTask.joinStream.description": "Join a dev chat on discord or twitch stream to earn 5 Love Charm every 5 minutes from the host wearing a streamer hat.",
   "claimReferralRewards.title": "Referral Rewards",
   "claimReferralRewards.description": "Congratulations! {{totalUnclaimedReferrals}} new players have joined and bought VIP using your referral link. Here are your rewards!",
   "referral.vip": "25 Love Charms when your friend buys VIP",
