[FEAT] Gas-less Marketplace (#5449)
* [FEAT] Flower Marketplace

* [FEAT] remove debug code

* wip

* [FEAT] Wallet wall onchain

Co-Authored-By: Spencer Dezart-Smith <17863697+spencerdezartsmith@users.noreply.github.com>

* fix tsc

* [FIX] Update feature flag on beta test

---------

Co-authored-by: Spencer Dezart-Smith <17863697+spencerdezartsmith@users.noreply.github.com>
Co-authored-by: Elias <101262042+eliasSFL@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5775,5 +5775,7 @@
   "twitter.weekly.share": "Share your farm",
   "twitter.weekly.instructions.1": "1. Post the image above to Twitter with hashtag {{hashtag}}",
   "twitter.weekly.instructions.2": "2. Verify your tweet by clicking the button below.",
-  "twitter.verify.cooldown": "Please wait {{time}} in between verifying your tweets."
+  "twitter.verify.cooldown": "Please wait {{time}} in between verifying your tweets.",
+  "marketplaceTransferInProgress": "Marketplace transfers are being finalised, please try again in a few minutes.",
+  "marketplaceTransferInProgress.label": "Marketplace transfer in progress"
 }
