--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5600,6 +5600,9 @@
   "rocketman.flower.compete": "Compete in monthly challenges to earn $FLOWER.",
   "rocketman.flower.social": "Complete social tasks, spread the word, and earn $FLOWER.",
   "rocketman.flower.eligible": "Polygon, Ronin & BASE users are eligible.",
+  "rocketman.flower.exchange": "$FLOWER Exchange is coming soon!",
+  "rocketman.flower.exchange.one": "On 14th April, you will be able to exchange your Love Charms for $FLOWER.",
+  "rocketman.flower.exchange.two": "You will be able to exchange 50 Love Charms for 1 $FLOWER.",
   "select.player": "Select Player",
   "errorLabelText": "Error",
   "share.CopyReferralLink": "Copy Referral Link",
