[FIX] Pol required

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5801,5 +5801,6 @@
   "rewards.daily.claimed": "Claimed",
   "rewards.vip.title": "VIP Reward",
   "rewards.vip.description": "A monthly reward for VIP members",
-  "rewards.vip.claimed": "Claimed"
+  "rewards.vip.claimed": "Claimed",
+  "error.insufficientMatic": "POL required"
 }
