--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5800,5 +5800,6 @@
   "rewards.daily.claimed": "Claimed",
   "rewards.vip.title": "VIP Reward",
   "rewards.vip.description": "A monthly reward for VIP members",
-  "rewards.vip.claimed": "Claimed"
+  "rewards.vip.claimed": "Claimed",
+  "announcement.exchangeLoveCharms": "Exchange Love Charms for $FLOWER at the Love Pool!"
 }
