[FEAT] Love Rush UI (#5468)
* Love rush polish

* VIP

* UI Updates

* [FEAT] Polish it up

* Changes

* Cleanup

* Formatting

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5752,7 +5752,7 @@
   "socialTask.upgradeToPetalParadise.description": "Expand your land fully and upgrade to Petal Paradise",
   "socialTask.complete50Deliveries": "Complete 50 deliveries",
   "socialTask.complete50Deliveries.description": "Go to the plaza and complete deliveries with various NPCs 50 times",
-  "socialTask.joinStream": "Join a stream",
+  "socialTask.joinStream": "Join our weekly stream for alpha, updates & giveaways!",
   "socialTask.joinStream.description": "Join a dev chat on discord or twitch stream to earn 5 Love Charm every 5 minutes from the host wearing a streamer hat.",
   "claimReferralRewards.title": "Referral Rewards",
   "claimReferralRewards.description": "Congratulations! {{totalUnclaimedReferrals}} new players have joined and bought VIP using your referral link. Here are your rewards!",
@@ -5816,5 +5816,27 @@
   "rewards.vip.title": "VIP Reward",
   "rewards.vip.description": "A monthly reward for VIP members",
   "rewards.vip.claimed": "Claimed",
+  "announcement.exchangeLoveCharms": "Exchange Love Charms for $FLOWER at the Love Pool!",
+  "news.loveRush": "Love Rush begins April 7th",
+  "news.loveRush.description": "Race against Bumpkins to earn Love Charms - exchange for prizes & FLOWER!",
+  "socialTask.discord": "Join the Discord Community & earn rewards.",
+  "socialTask.telegram": "Connect your Telegram, get reminders & earn rewards.",
+  "socialTask.twitter": "Follow our Twitter for prizes.",
+  "socialTask.helpBumpkins": "Complete tasks for Bumpkins to earn Love Charms.",
+  "taskBoard.loveRush": "Love Rush",
+  "taskBoard.limitedTimeDescription": "For a limited time, complete Bumpkin deliveries, chores & gifts to earn Love Charms!",
+  "taskBoard.howToEarn": "How to earn?",
+  "taskBoard.earnDescription": "Complete tasks to earn Love Charms & Rewards.",
+  "taskBoard.left": "left",
+  "streams.title": "Streams",
+  "streams.description": "Watch & listen to our team streams for alpha, updates & giveaways!",
+  "streams.discord": "Discord",
+  "streams.twitch": "Twitch",
+  "loveRush.dateRange": "April 7th - May 4th",
+  "loveRush.description": "During Love Rush, help the Bumpkin NPCs and earn Love Charms!",
+  "loveRush.deliveries": "Perform Bumpkin deliveries for Love Charms",
+  "loveRush.chores": "Complete Chores & earn Love Charms",
+  "loveRush.giftFlowers": "Gift flowers for bonus Love Charms",
+  "loveRush.dailyStreak": "Maintain a daily streak with NPCs to earn extra Love Charms",
   "error.insufficientMatic": "POL required"
 }
