--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5595,6 +5595,7 @@
   "announcement.flowerGemsDiscount": "Buy Gems with $FLOWER - save 30%",
   "announcement.gasless": "Gasless transactions are coming April 1st.",
   "announcement.referral": "Refer a friend and earn Rewards!",
+  "announcement.loveRush": "The Love Rush Event has begun! Join the festivities!",
   "rocketman.intro": "Howdy Bumpkin, I'm trying to build a flower tower to the moon!",
   "rocketman.flower.coming": "$FLOWER is coming",
   "rocketman.flower.launch": "On April 1st, $FLOWER will be added to the game!",
@@ -5838,5 +5839,6 @@
   "loveRush.chores": "Complete Chores & earn Love Charms",
   "loveRush.giftFlowers": "Gift flowers for bonus Love Charms",
   "loveRush.dailyStreak": "Maintain a daily streak with NPCs to earn extra Love Charms",
+  "loveRush.treasureChest": "Get bonus 15 Love Charms when claiming your daily reward!",
   "error.insufficientMatic": "POL required"
 }
