Change Label type

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5838,7 +5838,7 @@
   "loveRush.deliveries": "Perform Bumpkin deliveries for Love Charms",
   "loveRush.chores": "Complete Chores & earn Love Charms",
   "loveRush.giftFlowers": "Gift flowers for bonus Love Charms",
-  "loveRush.dailyStreak": "Maintain a daily streak with NPCs to earn extra Love Charms",
+  "loveRush.dailyStreak": "Maintain a daily delivery streak with NPCs to earn extra Love Charms from deliveries",
   "loveRush.treasureChest": "Get bonus 15 Love Charms when claiming your daily reward!",
   "error.insufficientMatic": "POL required"
 }
