--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5840,5 +5840,8 @@
   "loveRush.giftFlowers": "Gift flowers for bonus Love Charms",
   "loveRush.dailyStreak": "Maintain a daily delivery streak with NPCs to earn extra Love Charms from deliveries",
   "loveRush.treasureChest": "Get bonus 15 Love Charms when claiming your daily reward!",
+  "loveRush.eventTime": "Love Rush Event - {{time}} left",
+  "loveRush.choreBonus": "Bonus 100 Love Charms for completing 21 Chores in a week!",
+  "loveRush.deliveryStreakBonus": "Love Rush Bonus: {{loveCharmReward}} Love Charms",
   "error.insufficientMatic": "POL required"
 }
