--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2613,14 +2613,14 @@
   "nftminting.mintingYourNFT": "Minting your NFT and storing progress on the Blockchain",
   "nftminting.almostThere": "Almost there",
   "noaccount.newFarmer": "New Farmer",
-  "noaccount.addPromoCode": "Add a promo code?",
+  "noaccount.addReferralCode": "Have a referral code?",
   "noaccount.alreadyHaveNFTFarm": "Already have an NFT farm?",
   "noaccount.createFarm": "Create Farm",
   "noaccount.noFarmNFTs": "You do not own any farm NFTs.",
   "noaccount.createNewFarm": "Create new farm",
   "noaccount.selectNFTID": "Select your NFT ID:",
   "noaccount.welcomeMessage": "Welcome to Sunflower Land. Do you want to create a farm?",
-  "noaccount.promoCodeLabel": "Promo Code",
+  "noaccount.referralCodeLabel": "Referral Code: {{referralId}}",
   "noaccount.haveFarm": "No, I have one",
   "noaccount.letsGo": "Yes, let's go!",
   "noBumpkin.readyToFarm": "Awesome, your Bumpkin is ready to farm!",
