[FEAT] Add Validation checks for Referral Code

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3272,7 +3272,7 @@
   "reward.spendWisely": "Spend it wisely.",
   "reward.wearable": "A wearable for your Bumpkin",
   "reward.collectible": "A collectible for your Farm",
-  "reward.promo.code": "Enter your promo code:",
+  "reward.referral.code": "Enter your referral code:",
   "reward.woohoo": "Woohoo! You found a hidden reward.",
   "reward.connectWeb3Wallet": "Connect a Web3 Wallet for a daily reward.",
   "reward.factionPoints": "Earn glory for your faction!",
