--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2621,6 +2621,10 @@
   "noaccount.selectNFTID": "Select your NFT ID:",
   "noaccount.welcomeMessage": "Welcome to Sunflower Land. Do you want to create a farm?",
   "noaccount.referralCodeLabel": "Referral Code: {{referralId}}",
+  "noaccount.referralCodeNotFound": "Referral code not found",
+  "noaccount.referralCodeChecking": "Checking...",
+  "noaccount.referralCodeValid": "Valid Referral Code",
+  "noaccount.referralCodeError": "Error checking referral code",
   "noaccount.haveFarm": "No, I have one",
   "noaccount.letsGo": "Yes, let's go!",
   "noBumpkin.readyToFarm": "Awesome, your Bumpkin is ready to farm!",
