--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -407,7 +407,7 @@
   "description.house": "A place to rest your head",
   "description.crop.machine": "Automate your crop production",
   "description.crab.hat": "A cute, living crab perched atop your head, adding charm and a little extra personality. This friendly companion helps you catch more treasures with ease",
-  "description.love.charm": "A token of love from the community",
+  "description.love.charm": "Exchange for exclusive rewards and $FLOWER",
   "building.oil.remaining": "{{oil}} Oil in building",
   "cooking.building.oil.description": "You can boost your recipe cooking times by {{boost}}% when adding oil into the {{buildingName}}.",
   "cooking.building.oil.boost": "Oil boost",
