[FEAT] Change Start date to 1st May

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5639,7 +5639,7 @@
   "rocketman.flower.social": "Complete social tasks, spread the word, and earn $FLOWER.",
   "rocketman.flower.eligible": "Polygon, Ronin & BASE users are eligible.",
   "rocketman.flower.exchange": "$FLOWER Exchange is coming soon!",
-  "rocketman.flower.exchange.one": "On 5th May, you will be able to exchange your Love Charms for $FLOWER.",
+  "rocketman.flower.exchange.one": "On 1st May, you will be able to exchange your Love Charms for $FLOWER.",
   "rocketman.flower.exchange.two": "You will be able to exchange 50 Love Charms for 1 $FLOWER.",
   "flower.exchange.title": "Exchange $FLOWER",
   "flower.exchange.price": "1 $FLOWER = {{exchangeRate}} Love Charms",
