[BOT] Update translations [skip ci] # Description
Please include a summary of the change and which issue is fixed. Please also include relevant motivation and context. List any dependencies that are required for this change.

Fixes #issue

# What needs to be tested by the reviewer?

Please describe how this can be tested.

# Checklist:

- [ ] Title of the PR is relevant and is prefixed with [FEAT], [CHORE] or [FIX]
- [ ] Screenshot if it includes any UI changes
- [ ] I have read the contributing guidelines and agree to the T&Cs
- [ ] I have performed a self-review of my own code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my feature works
- [ ] New and existing unit tests pass locally with my changes
- [ ] Any dependent changes have been merged and published in downstream modules

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2344,8 +2344,16 @@
   "island.goblin.retreat": "Goblin Retreat",
   "islandNotFound.message": "You have landed in the middle of nowhere!",
   "islandNotFound.takeMeHome": "Take me home",
-  "islandupgrade.confirmUpgrade": "Are you sure you want to upgrade to a new island.",
-  "islandupgrade.warning": "Make sure you do not have any crops, fruit, buildings, chickens, crimstone, flowers or honey in progress. These will not be able to be harvested and will be returned to your inventory. Sunstones, House, Market, Fire Pit and Workbench will remain placed on your land.",
+  "islandupgrade.confirmUpgrade": "Are you sure you want to upgrade to a new island ?",
+  "islandupgrade.warning1": "Make sure you do not have any of the following resource nodes or cooking buildings in progress. These will not be able to be harvested and will be reset, then returned to your inventory.",
+  "islandupgrade.warning2": "Sunstone Rock, House, Market, Fire Pit and Workbench will remain placed on your land.",
+  "islandupgrade.warning3": "House, Market, Fire Pit and Workbench will remain placed on your land.",
+  "islandupgrade.empty.cropPlots": "Crop Plots are empty",
+  "islandupgrade.ready.cookingBuildings": "Cooking Buildings are ready",
+  "islandupgrade.empty.fruitPatches": "Fruit Patches are empty",
+  "islandupgrade.empty.flowerbeds": "Flowers Beds are empty",
+  "islandupgrade.ready.crimstoneRocks": "Crimstone Rocks are ready",
+  "islandupgrade.ready.oilReserves": "Oil Reserves are ready",
   "islandupgrade.upgradeIsland": "Upgrade Island",
   "islandupgrade.newOpportunities": "An exotic island awaits you with new resources and opportunities to grow your farm.",
   "islandupgrade.tempItemWarning": "Active totems/hourglasses will be burned",
