[FEAT] Condition for Beehives

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2352,6 +2352,7 @@
   "islandupgrade.ready.cookingBuildings": "Cooking Buildings are ready",
   "islandupgrade.empty.fruitPatches": "Fruit Patches are empty",
   "islandupgrade.empty.flowerbeds": "Flowers Beds are empty",
+  "islandupgrade.empty.beehives": "Beehives are Empty",
   "islandupgrade.ready.crimstoneRocks": "Crimstone Rocks are ready",
   "islandupgrade.ready.oilReserves": "Oil Reserves are ready",
   "islandupgrade.upgradeIsland": "Upgrade Island",
