--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5237,7 +5237,7 @@
   "marketplace.myProfile": "My Profile",
   "marketplace.budNfts": "Bud NFTs",
   "budBuff.stem.3leafClover.boost": "+0.5 Crop",
-  "budBuff.stem.fishHat.boost": "10% Critical Chance +1 fish",
+  "budBuff.stem.fishHat.boost": "10% Chance of +1 Fish",
   "budBuff.stem.diamondGem.boost": "+0.2 Mineral",
   "budBuff.stem.goldGem.boost": "+0.2 Gold",
   "budBuff.stem.minerHat.boost": "+0.2 Iron",
@@ -5258,7 +5258,7 @@
   "budBuff.type.plaza.boost": "+0.3 Basic Crops",
   "budBuff.type.woodlands.boost": "+0.2 Wood",
   "budBuff.type.cave.boost": "+0.2 Minerals",
-  "budBuff.type.sea.boost": "+10% Critical Chance +1",
+  "budBuff.type.sea.boost": "10% Chance of +1 Fish",
   "budBuff.type.castle.boost": "+0.3 Medium Crops",
   "budBuff.type.port.boost": "+10% Fish XP",
   "budBuff.type.retreat.boost": "+0.2 Animal Produce",
