[FIX] Add Basic Leaf Stem Boost--- the boost for the stem currently doesn't show as label in the marketplace

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5243,6 +5243,7 @@
   "budBuff.stem.minerHat.boost": "+0.2 Iron",
   "budBuff.stem.carrotHead.boost": "+0.3 Carrot",
   "budBuff.stem.sunflowerHat.boost": "+0.5 Sunflower",
+  "budBuff.stem.basicLeafHat.boost": "+0.2 Basic Crops",
   "budBuff.stem.rubyGem.boost": "+0.2 Stone",
   "budBuff.stem.mushroom.boost": "+0.3 Mushroom",
   "budBuff.stem.magicMushroom.boost": "+0.2 Magic Mushroom",
