[FEAT] Whats on text

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5562,6 +5562,8 @@
   "whatsOn.skillSystem": "New skill system launched!",
   "whatsOn.seasonCompetition": "Chapter Competition",
   "whatsOn.april14th": "14th April",
+  "whatsOn.loveRush": "Love Rush",
+  "whatsOn.loveRushText": "The Love Rush Event has begun! Join the festivities and earn FLOWER!",
   "whatsOn.may1st": "1st May",
   "season.hasBegun": "{{name}} has begun!",
   "season.newCrops": "New crops & fish",
