--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5902,5 +5902,21 @@
   "telegram.announcements": "Announcements",
   "telegram.bot": "Pumpkin Pete Bot",
   "goblinMarket.thanks": "Thanks for all of your resources. The Goblin Market is now closed",
-  "thanks": "Thanks"
+  "thanks": "Thanks",
+  "softBan.goblinDetection": "Goblin Detection",
+  "softBan.networkWarning": "The Goblins noticed some similar devices connected to your network. To help keep the Bumpkin economy safe and fair for everyone, please complete a quick verification to continue your adventure.",
+  "softBan.step1": "Step 1",
+  "softBan.socialVerification": "Join the Discord or Telegram community & follow the steps to verify your account.",
+  "softBan.discordVerification": "Discord verification",
+  "softBan.or": "or",
+  "softBan.telegramVerification": "Telegram verification",
+  "softBan.step2": "Step 2",
+  "softBan.faceVerification": "To make sure every Bumpkin is unique, we ask for a quick face verification. Your privacy is important — this is used only to keep the economy safe and stop bots.",
+  "softBan.faceProtection": "Face protection",
+  "softBan.discordOnboarding": "Discord Onboarding",
+  "softBan.discordInstructions": "Follow the instructions in #X channel to verify your account Once completed, refresh your browser.",
+  "softBan.back": "Back",
+  "softBan.telegramVerificationTitle": "Telegram Verification",
+  "softBan.telegramInstructions": "Open up the Sunflower Land Bot and run the /verify command.",
+  "softBan.openBot": "Open Bot"
 }
