[FEAT] Spanish Dictionary

--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -57,10 +57,8 @@
   "deliveryDynamo.description": "Completa 3 entregas",
   "deliveryDynamo.one": "Hola, agricultor confiable! Los Bumpkins de todas partes necesitan tu ayuda con las entregas.",
   "deliveryDynamo.two": "Al completar las entregas, los harás felices y ganarás fantásticas recompensas de SFL a cambio.",
-  "seasonedFarmer.description": "Reúne 50 recursos de temporada",
   "seasonedFarmer.one": "¡Hola, aventurero de temporada! Sunflower Land es conocida por sus estaciones especiales llenas de objetos únicos y sorpresas.",
   "seasonedFarmer.two": "Al recolectar recursos de temporada, tendrás acceso a recompensas por tiempo limitado, artesanías exclusivas y tesoros raros. Es como tener una entrada en primera fila para ver las maravillas de cada temporada.",
-  "seasonedFarmer.three": "Así que completa las tareas, participa en eventos y disfruta de las recompensas que trae cada temporada.",
   "seasonedFarmer.three": "Así que completa las tareas, participa en eventos y reúne esos boletos de temporada para disfrutar de lo mejor que Sunflower Land tiene para ofrecer!",
   "treasureHunter.description": "Cava 10 agujeros",
   "treasureHunter.one": "Hola, cazatesoros! Sunflower Land está llena de tesoros escondidos que esperan ser descubiertos.",
@@ -726,7 +724,7 @@
   "description.lily.seed": "Una semilla de lirio",
   "cropMachine.moreOilRequired": "Se requiere más aceite",
   "cropMachine.oilTank": "Depósito de aceite",
-  "cropMachine.machineRuntime": "Tiempo de ejecución de la máquina {{time}}",
+  "cropMachine.machineRuntime": "Tiempo de ejecución de la máquina con petroleo {{time}}",
   "cropMachine.growTimeRemaining": "Tiempo de crecimiento restante: {{time}}",
   "cropMachine.paused": "En pausa",
   "cropMachine.readyToHarvest": "Listo para cosechar",
@@ -734,7 +732,7 @@
   "cropMachine.totalSeeds": "Total de semillas plantadas: {{total}}",
   "cropMachine.totalCrops": "Rendimiento total de {{cropName}}: {{total}}",
   "cropMachine.harvest": "Cosecha",
-  "cropMachine.pickSeed": "Selecciona una semilla",
+  "cropMachine.pickSeed": "Selecciona una semilla para cultivar",
   "cropMachine.addSeeds": "Agregar{{seedType}}",
   "cropMachine.availableInventory": "Disponible {{amount}}",
   "cropMachine.seeds": "Semillas: {{amount}}",
@@ -742,11 +740,11 @@
   "cropMachine.all": "Todas",
   "cropMachine.addSeedPack": "Agregar paquete de semillas",
   "cropMachine.notStartedYet": "Aún no se ha iniciado",
-  "cropMachine.seedPacks": "Paquetes de semillas",
-  "cropMachine.readyCropPacks": "Paquetes de cosecha listos",
+  "cropMachine.seedPacks": "Espacios para agregar paquetes de semillas",
+  "cropMachine.readyCropPacks": "Paquetes de  listos",
   "cropMachine.readyCropPacks.description": "Actualmente tienes paquetes de cosecha de {{totalReady}} que cosechar! Haz clic en el paquete que deseas cosechar.",
   "cropMachine.harvestCropPack": "Paquete de cosecha",
-  "cropMachine.addOil": "Aceite para agregar",
+  "cropMachine.addOil": "Agregar Aceite",
   "cropMachine.oil.description": "Su máquina necesita aceite para funcionar. Cada paquete de semillas requerirá una cantidad determinada de aceite en función del tiempo que tarden los cultivos en crecer. A medida que añadas aceite, puedes ver cuánto tiempo funcionará la máquina cuando se le dé esa cantidad.",
   "cropMachine.maxRuntime": "Tiempo de ejecución máximo: {{time}}",
   "cropMachine.oilToAdd": "Aceite para agregar: {{amount}}",
@@ -1707,7 +1705,7 @@
   "copy.link": "Copiar enlace",
   "copy.failed": "Error al copiar!",
   "coupons": "Cupones",
-  "craft": "Fabrica",
+  "craft": "Fabricar",
   "crops": "Cultivos",
   "danger": "Peligro",
   "date": "Fecha",
@@ -1982,7 +1980,6 @@
   "gathering.guide.two": "A medida que avances y reúnas suficientes recursos, desbloquearás la posibilidad de expandir tu territorio. Expandir tu tierra abre nuevos horizontes en Sunflower Land. Las expansiones de tierras revelan un tesoro de recursos, que incluye tierra fértil para plantar cultivos, árboles majestuosos, valiosos depósitos de piedras, preciosas vetas de hierro, resplandecientes depósitos de oro, deliciosos huertos frutales y mucho más.",
   "gathering.guide.three": "Recuerda que la recolección de recursos y la expansión de la tierra son la columna vertebral de tu viaje agrícola. Acepta los desafíos y las recompensas que vienen con cada paso y observa cómo tu tierra de girasoles florece con abundantes recursos e infinitas posibilidades.",
   "crops.guide.one": "En Sunflower Land, los cultivos desempeñan un papel crucial en tu camino hacia la prosperidad. Al plantar y cosechar cosechas, puedes ganar monedas o utilizarlas para crear recetas y objetos valiosos dentro del juego.",
-  "crops.guide.two": "Para cultivar, debes comprar las semillas correspondientes en la tienda del juego. Cada cosecha tiene un tiempo de crecimiento diferente, que va desde solo 1 minuto para los girasoles hasta 36 horas para la col rizada. Una vez que las cosechas hayan crecido por completo, podrás cosecharlas y obtener las recompensas.",
   "crops.guide.three": "Recuerda que, a medida que amplíes tu tierra y avances en el juego, habrá más cultivos disponibles, lo que te ofrecerá mayores oportunidades de ganar monedas y explorar el enorme potencial de la economía agrícola de Sunflower Land. ¡Así que ensucíate las manos, planta esas semillas y observa cómo florecen tus cosechas mientras cosechas para triunfar!",
   "building.guide.one": "Explora la amplia gama de edificios disponibles a medida que avanzas en Sunflower Land. Desde gallineros hasta talleres y mucho más, cada estructura aporta ventajas únicas a tu granja. Aprovecha estos edificios para optimizar tus operaciones agrícolas, aumentar la productividad y desbloquear nuevas posibilidades. Planifica tu diseño con cuidado y disfruta de las recompensas que se obtienen al construir una próspera granja en Sunflower Land.",
   "cooking.guide.one": "Cocinar te permite nutrir a tu Bumpkin y ayudarlo a ganar valiosos puntos de experiencia (XP). Al utilizar los cultivos que has cosechado, puedes preparar comida deliciosa en diferentes edificios dedicados a la cocina.",
