--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5338,9 +5338,9 @@
   "twitter.connected": "已连接",
   "twitter.connect": "连接推特",
   "twitter.follow": "关注推特",
-  "loveCharm.update": "爱情护符更新",
-  "loveCharm.intro": "为了为 “推广赚钱” 活动做准备，我们用一种新货币替换了社区币... Love Charms！",
-  "loveCharm.intro.two": "每拥有一枚社区硬币，您将获得 25 个爱情护符。",
+  "loveCharm.update": "爱心护符更新",
+  "loveCharm.intro": "为了为 “推广赚钱” 活动做准备，我们用一种新货币替换了社区币... 爱心护符！",
+  "loveCharm.intro.two": "每拥有一枚社区硬币，您将获得 25 个爱心护符。",
   "announcement.flowerGemsDiscount": "使用 $FLOWER 购买宝石-节省 30%",
   "transaction.payFlower": "使用 FLOWER",
   "buying.gems": "购买宝石",
@@ -5389,11 +5389,11 @@
   "socialTask.complete50Deliveries.description": "前往广场与各种 NPC 一起完成配送 50 次",
   "claimReferralRewards.title": "推荐奖励",
   "claimReferralRewards.description": "恭喜！{{totalUnclaimedReferrals}} 新玩家已加入并使用您的推荐链接购买了VIP。这是你的奖励！",
-  "referral.vip": "朋友购买 VIP 时获得 25 个爱情护符",
+  "referral.vip": "朋友购买 VIP 时获得 25 个爱心护符",
   "taskBoard.tasks": "任务",
-  "taskBoard.loveCharmCount": "库存：{{loveCharmCount}} 爱情护符",
-  "taskBoard.tasksDescription": "完成任务即可获得爱情护符。",
-  "taskBoard.tasksDescriptionTwo": "爱情护符可用于在奖励商店购买特殊物品",
+  "taskBoard.loveCharmCount": "库存：{{loveCharmCount}} 爱心护符",
+  "taskBoard.tasksDescription": "完成任务即可获得爱心护符。",
+  "taskBoard.tasksDescriptionTwo": "爱心护符可用于在奖励商店购买特殊物品",
   "taskBoard.otherWays": "其他赚取 Love Charm 的方法",
   "taskBoard.howToRefer": "如何推荐朋友？",
   "chapters.guide.one": "章节带来了新的挑战、收藏品和宝藏。玩家收集门票，必须计划如何明智地使用它们。",
@@ -5417,7 +5417,7 @@
   "changing.username": "正在更改用户名...",
   "changing.username.success": "用户名已成功更改！",
   "claimed": "已申领",
-  "description.streamer.hat.boost": "每 5 分钟奖励玩家 5 个爱情护符",
+  "description.streamer.hat.boost": "每 5 分钟奖励玩家 5 个爱心护符",
   "twitter.post.farm": "分享你的农场",
   "twitter.post.weekly": "分享您的每周进度",
   "posting.twitter.success": "推文已成功发布！",
@@ -5550,9 +5550,9 @@
   "marketplaceListingNotClaimed": "请申领您在商城购买的商品，然后重试。",
   "marketplaceListingNotClaimed.label": "市场购买",
   "rocketman.flower.exchange": "$FLOWER 交易所即将上线！",
-  "rocketman.flower.exchange.two": "你可以用 50 个爱情护符兑换 1 枚 $FLOWER。",
+  "rocketman.flower.exchange.two": "你可以用 50 个爱心护符兑换 1 枚 $FLOWER。",
   "flower.exchange.title": "兑换 $FLOWER",
-  "flower.exchange.price": "1 $FLOWER = {{exchangeRate}} 爱情护符",
+  "flower.exchange.price": "1 枚 $FLOWER = {{exchangeRate}} 个爱心护符",
   "flower.exchange.confirm": "您确定要进行以下交换吗？",
   "flower.exchange.error.min": "你不能兑换少于 50 个 Love Charms",
   "flower.exchange.error.balance": "你没有足够的 Love Charms 来兑换 $FLOWER",
@@ -5560,33 +5560,33 @@
   "flower.exchange.youWillReceive": "您将收到：",
   "socialTask.referFriend.description": "使用您的推荐链接推荐朋友加入游戏——仅限第一次！一旦你的第一个朋友使用你的推荐链接，25个爱情符就会被空投给你。",
   "socialTask.joinStream": "加入我们的每周直播，获取 alpha 版、更新和赠品！",
-  "announcement.exchangeLoveCharms": "在 Love Pool 用爱情护符兑换 $FLOWER！",
+  "announcement.exchangeLoveCharms": "在 Love Pool 使用爱心护符兑换 $FLOWER！",
   "news.loveRush": "Love Rush 将于4月7日开始",
   "news.loveRush.description": "与 Bumpkins 比赛赢取 Love Charms-兑换奖品和鲜花！",
   "socialTask.discord": "加入 Discord 社区并获得奖励。",
   "socialTask.telegram": "连接您的电报，获取提醒并获得奖励。",
   "socialTask.twitter": "关注我们的推特获取奖品。",
-  "socialTask.helpBumpkins": "完成 Bumpkins 的任务以获得爱情护符。",
+  "socialTask.helpBumpkins": "完成 Bumpkins 的任务以获得爱心护符。",
   "taskBoard.loveRush": "爱情拉什",
   "taskBoard.limitedTimeDescription": "在限定时间内，完成 Bumpkin 配送、家务和礼物，即可获得 Love Charms！",
   "taskBoard.howToEarn": "如何赚钱？",
-  "taskBoard.earnDescription": "完成任务即可获得爱情护符和奖励。",
+  "taskBoard.earnDescription": "完成任务即可获得爱心护符和奖励。",
   "taskBoard.left": "左边",
   "streams.title": "直播",
   "streams.description": "观看并收听我们的团队直播以获取 alpha 版、更新和赠品！",
   "streams.discord": "Discord",
   "streams.twitch": "抽搐",
   "loveRush.dateRange": "4 月 7 日至 5 月 4 日",
-  "loveRush.description": "在 Love Rush 期间，帮助 Bumpkin NPC 并获得爱情护符！",
+  "loveRush.description": "在 Love Rush 期间，帮助 Bumpkin NPC 并获得爱心护符！",
   "loveRush.deliveries": "为 Love Charms 进行 Bumpkin 配送",
-  "loveRush.chores": "完成琐事并获得爱情护符",
-  "loveRush.giftFlowers": "赠送鲜花以获得额外的爱情护符",
+  "loveRush.chores": "完成琐事并获得爱心护符",
+  "loveRush.giftFlowers": "赠送鲜花以获得额外的爱心护符",
   "announcement.loveRush": "Love Rush 活动已经开始！加入庆祝活动吧！",
-  "loveRush.dailyStreak": "与 NPC 保持每日交付记录，通过交付获得额外的爱情护符",
-  "loveRush.treasureChest": "领取每日奖励时可获得额外的 15 个爱情护符！",
+  "loveRush.dailyStreak": "与 NPC 保持每日交付记录，通过交付获得额外的爱心护符",
+  "loveRush.treasureChest": "领取每日奖励时可获得额外的 15 个爱心护符！",
   "loveRush.eventTime": "Love Rush 活动-{{time}} 左",
-  "loveRush.choreBonus": "一周内完成 21 个杂务，即可获得 100 个爱情护符！",
-  "loveRush.deliveryStreakBonus": "Love Rush 奖励：{{loveCharmReward}} 爱情护符",
+  "loveRush.choreBonus": "一周内完成 21 个杂务，即可获得 100 个爱心护符！",
+  "loveRush.deliveryStreakBonus": "Love Rush 奖励：{{loveCharmReward}} 爱心护符",
   "description.floralArch": "这座宏伟的入口由大自然的精华构成，欢迎所有经过的人。",
   "description.flowerCoin": "象征着新起点，标志着向日葵之地开启了一个新时代。",
   "description.flowerStatue": "一座成长和转型的丰碑，在 Bumpkins 的世界以新的象征蓬勃发展之际高高耸立",
@@ -5614,15 +5614,15 @@
   "description.purpleTile": "醒目的紫色瓷砖，非常适合营造丰富而活泼的氛围。",
   "description.redTile": "醒目的红色瓷砖，每一步都散发着温暖和活力。",
   "description.yellowTile": "明亮的黄色瓷砖，捕捉阳光的温暖和快乐。",
-  "rewardShop.msg1": "欢迎来到我的奖励商店。收集爱情护符并用它们兑换稀有物品。",
+  "rewardShop.msg1": "欢迎来到我的奖励商店。收集爱心护符并用它们兑换稀有物品。",
   "rewardShop.wearable": "不错的购买！您的新可穿戴设备可以安全地存放在衣柜里。你可以从那里把它装备成小伙子。",
   "rewardShop.collectible": "不错的购买！您的新收藏品安全地存储在库存中。",
   "rewards.daily.description": "奖励资源、金币和 {{ticket}}",
-  "loveRush.referral": "在 Love Rush 期间，VIP 推荐将奖励 200 个爱情护符",
+  "loveRush.referral": "在 Love Rush 期间，VIP 推荐将奖励 200 个爱心护符",
   "telegram.prompts": "按照电报中的提示开始操作。",
   "flower.exchange.inventory": "库存：{{loveCharmCount}}",
   "flower.exchange.dailyLimit": "每日限额：{{loveCharmsSpent}}/{{dailyLimit}}",
-  "flower.exchange.error.max": "你每天兑换的爱情护符不能超过 10,000 个",
+  "flower.exchange.error.max": "你每天兑换的爱心护符不能超过 10,000 个",
   "telegram.announcements": "公告",
   "telegram.bot": "南瓜皮特机器人",
   "posting.twitter.tweet.used": "推文已经使用了",
@@ -5637,7 +5637,7 @@
   "noaccount.referralCodeError": "检查推荐码时出错",
   "reward.referral.code": "输入您的推荐码：",
   "description.love.charm": "兑换专属奖励和 $FLOWER",
-  "rocketman.flower.exchange.one": "5 月 1 日，你可以用爱情护符兑换 $FLOWER。",
+  "rocketman.flower.exchange.one": "5 月 1 日，你可以用爱心护符兑换 $FLOWER。",
   "budBuff.stem.3leafClover.boost": "+0.5 作物（茎）",
   "budBuff.stem.fishHat.boost": "10% 几率获得 +1 条鱼（茎）",
   "budBuff.stem.diamondGem.boost": "+0.2 矿物质（茎）",
